feat: Update Manager Dashboard and Reports Page with new color scheme and API integration
- Changed chart colors in ManagerDashboard to a purple theme.
- Refactored ReportsPage to fetch employee attendance data from the API.
- Added CSV export functionality for attendance records.
- Implemented loading states and error handling for data fetching.
- Updated attendance data handling to use API responses instead of mock data.
- Enhanced user experience with loading indicators during data fetches.

feat: Enhance Team Calendar Page with API integration and improved attendance tracking

- Integrated API calls to fetch team members and attendance records.
- Improved attendance statistics calculation for each day in the calendar.
- Added loading state for attendance data fetching.
- Enhanced employee data merging logic to ensure unique entries.
- Updated calendar UI to reflect attendance status visually.

feat: Create API service for centralized API calls

- Added api.ts file to manage all API requests and responses.
- Implemented authentication and attendance-related API methods.
- Included error handling for API responses and token management.

refactor: Update Redux slices for attendance and authentication

- Converted attendance and authentication slices to use async thunks for API calls.
- Improved error handling and loading states in Redux slices.
- Cleaned up unused actions and state properties in slices.

style: Update Tailwind CSS configuration for improved typography

- Modified font family settings for better cross-platform compatibility.
- Added custom font weights for consistent styling across the application.

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,22 @@
 # AttendEase Environment Variables
-# Copy this file to .env and fill in the values
+# Copy this file to .env (and backend/.env) then customize.
 
-# API Configuration (for backend integration)
-VITE_API_URL=http://localhost:3000/api
-
-# Supabase Configuration (optional - for Lovable Cloud backend)
-VITE_SUPABASE_URL=your_supabase_project_url
-VITE_SUPABASE_ANON_KEY=your_supabase_anon_key
-
-# App Configuration
+#################################
+# Frontend (Vite)
+#################################
+VITE_API_URL=http://localhost:5000/api
 VITE_APP_NAME=AttendEase
 VITE_APP_ENV=development
+
+# Optional Supabase / Lovable Cloud configuration
+VITE_SUPABASE_URL=
+VITE_SUPABASE_ANON_KEY=
+
+#################################
+# Backend (Express)
+#################################
+MONGODB_URI=mongodb://localhost:27017/attendance_system
+JWT_SECRET=change_me
+PORT=5000
+FRONTEND_URL=http://localhost:5173
+NODE_ENV=development
