--- a/.env.example
+++ b/.env.example
@@ -8,7 +8,7 @@ VITE_API_URL=http://localhost:5000/api
 VITE_APP_NAME=AttendEase
 VITE_APP_ENV=development
 
-# Optional Supabase / Lovable Cloud configuration
+# Optional Supabase configuration
 VITE_SUPABASE_URL=
 VITE_SUPABASE_ANON_KEY=
 
